--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="preloader">
-        <img src="gif/spinner.gif" alt="Loading..." class="preloader-image">
+        <img src="spinner.gif" alt="Loading..." class="preloader-image">
     </div>
     <canvas id="particleCanvas"></canvas> 
     <div class="container">
